--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,57 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
+      <!-- <form (ngSubmit)="onSubmit(f)" #f="ngForm"> -->
+      -- <form (ngSubmit)="onSubmit()" #f="ngForm">
         <div id="user-data">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control">
+            <input 
+            type="text" 
+            id="username" 
+            class="form-control"
+            name="username"
+            ngModel
+            required>
           </div>
           <button class="btn btn-default" type="button">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
-            <input type="email" id="email" class="form-control">
+            <input 
+            type="email" 
+            id="email" 
+            class="form-control"
+            name="email"
+            ngModel
+            required
+            email
+            #email="ngModel">
+            <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid value</span>
           </div>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
-          <select id="secret" class="form-control">
+          <select 
+          id="secret" 
+          class="form-control"
+          name="secret"
+          [ngModel]="defaultQuestion">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+
+        <textarea 
+        class="form-control"
+        name="questionAnswer" 
+        rows="3" 
+        [(ngModel)]="answer"></textarea>
+
+        <p>your reply is {{ answer }}</p>
+        <button 
+        class="btn btn-primary" 
+        type="submit"
+        [disabled]="!f.valid">Submit</button>
       </form>
     </div>
   </div>
