--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,10 +58,18 @@
           {{ gender }}
           </label>
         </div>
-        <button 
-        class="btn btn-primary" 
-        type="submit"
-        [disabled]="!f.valid">Submit</button>
+        <div class="row">
+          <div class="col-xs-6">
+              <button 
+              class="btn btn-primary" 
+              type="submit"
+              [disabled]="!f.valid">Submit</button>
+          </div>
+          <div class="col-xs-6">
+            <button class="btn btn-primary" (click)="onReset()">Reset</button>
+          </div>
+        </div>
+      
       </form>
     </div>
   </div>
